src/index.css
@import "tailwindcss";
@custom-variant dark (&:is(.dark *));

@layer base {
  html, body {
    overflow-x: hidden;
    position: relative;
    width: 100%;
  }

  :root {
    --bg-light: #f4f4f5; /* zinc-100 */
    --bg-dark: #09090b; /* zinc-950 */
  }
  
  body {
    background-color: var(--bg-light);
    color: #18181b; /* zinc-900 */
    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 300ms;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
  
  .dark body {
    background-color: var(--bg-dark);
    color: #f4f4f5; /* zinc-100 */
  }

  ::-webkit-scrollbar {
    width: 6px;
    height: 6px;
  }
  ::-webkit-scrollbar-track {
    background: transparent;
  }
  ::-webkit-scrollbar-thumb {
    background: #d4d4d8; 
    border-radius: 10px;
  }
  .dark ::-webkit-scrollbar-thumb {
    background: #27272a; 
  }
}

